[tool.poetry]
name = "git-owner"
version = "0.2.0"
description = "Estimate who the approximate owner of a file is in a Git repository."
authors = ["Marek Suchánek <marek.suchanek@protonmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "git_owner"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
